@@ -5,6 +5,7 @@ Changelog
 2018.4.8 (unreleased)
 ---------------------
 
+- Fix parent reference number fetching for repository roots. [Rotonen]
 - Fix sharing-form local_roles inheritance fallback and skip it for administators and managers. [phgross]
 
 
